# llm-meter

./: README.md  README_CN.md  compose.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html  inspirations.md
examples/: cloudflare-logpush.jsonl  llm-meter.yml
llm_meter/: __init__.py  __main__.py  alerts.py  bundle.py  config.py  dashboard.py  demo.py  markdown.py  parser.py  prometheus.py  storage.py  tail.py
tests/: test_budget_alerts.py  test_dashboard.py  test_demo.py  test_export_bundle.py  test_export_markdown.py  test_pages.py  test_parser.py  test_prometheus.py  test_tail.py
