[project]
name = "llm-meter"
version = "0.16.0"
description = "Lightweight usage analytics and abuse detection for OpenAI-compatible API gateways"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tarai-dl" }]
keywords = ["llm", "openai", "nginx", "observability", "api-gateway", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Log Analysis",
    "Topic :: System :: Monitoring",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/tarai-dl/llm-meter"
Repository = "https://github.com/tarai-dl/llm-meter"
Issues = "https://github.com/tarai-dl/llm-meter/issues"

[project.scripts]
llm-meter = "llm_meter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
